[package]
name = "typepress"
version = "0.1.0"
edition = "2024"
description = "Pure Rust HTML/CSS → PDF engine. No browser required."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alitrack/typepress"

[dependencies]
# Core engine: fulgur provides HTML→PDF pipeline (Blitz→Taffy→Krilla)
fulgur = "0.18"
# CLI
clap = { version = "4", features = ["derive"] }
# LaTeX math rendering (pure Rust KaTeX)
katex = { package = "katex-rs", version = "0.2" }
# Regex for math detection
regex = "1"
mermaid-rs = { path = "../mermaid-rs" }
# Markdown input
pulldown-cmark = "0.13"
# Multi-format output (SVG/PNG)
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"
# Error handling
anyhow = "1"
tempfile = "3"
# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# PDF parsing for SVG Unicode text extraction (ToUnicode CMap)
lopdf = "0.34"
# HTTP for @font-face web font downloading
reqwest = { version = "0.12", features = ["blocking"] }
# Code syntax highlighting
syntect = "5"
# Logging
log = "0.4"
env_logger = "0.11"
