[package]
name = "typepress"
version = "0.3.0"
edition = "2024"
description = "Pure Rust HTML/CSS → PDF/SVG/PNG engine. No browser required."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alitrack/typepress"

[dependencies]
# Core engine: fulgur provides HTML→PDF pipeline (Blitz→Taffy→Krilla)
fulgur = "0.18"
# CLI
clap = { version = "4", features = ["derive"] }
# LaTeX math rendering (pure Rust KaTeX)
katex = { package = "katex-rs", version = "0.2" }
# Regex for math detection
regex = "1"
mermaid-rs = { version = "0.1", path = "../mermaid-rs" }
# Markdown input
pulldown-cmark = "0.13"
# Multi-format output (PNG rasterization)
tiny-skia = "0.11"
# Error handling
anyhow = "1"
tempfile = "3"
# Config
serde = { version = "1", features = ["derive"] }
noyalib = "0.0"
# PDF parsing for SVG Unicode text extraction (ToUnicode CMap)
lopdf = "0.40"
# HTTP for @font-face web font downloading
reqwest = { version = "0.12", features = ["blocking"] }
# Code syntax highlighting
syntect = "5"
# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
opt-level = 3

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
