[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typepress"
version = "0.4.0"
description = "Pure Rust HTML/CSS → PDF engine — wkhtmltopdf replacement"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "TypePress Contributors"}]
keywords = ["html-to-pdf", "pdf", "wkhtmltopdf", "markdown", "css"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

[project.urls]
Homepage = "https://github.com/alitrack/typepress"
Repository = "https://github.com/alitrack/typepress"

[project.scripts]
typepress = "typepress:main"

[tool.hatch.build.targets.wheel]
packages = ["src/typepress"]
